--- a/src/about.ui
+++ b/src/about.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>524</width>
-    <height>293</height>
+    <height>310</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -68,6 +68,9 @@ border: 4px solid black; </string>
    </item>
    <item>
     <layout class="QVBoxLayout" name="textLayout">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetMinimumSize</enum>
+     </property>
      <item>
       <widget class="QLabel" name="titleLabel">
        <property name="styleSheet">
@@ -86,11 +89,11 @@ border: 4px solid black; </string>
        <property name="minimumSize">
         <size>
          <width>366</width>
-         <height>174</height>
+         <height>191</height>
         </size>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Bringing a graphical user interface to JackTrip, a system for high quality audio network performance over the internet.&lt;/p&gt;&lt;p&gt;Copyright © 2020 Aaron Wyatt.&lt;br/&gt;Built on JackTrip version %VERSION%, Copyright © 2008-2020 Juan-Pablo Caceres, Chris Chafe, et al.&lt;br/&gt;SoundWIRE group at CCRMA, Stanford University.&lt;/p&gt;&lt;p&gt;This is beta software and is provided &amp;quot;as is&amp;quot;, without warranty of any kind.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Bringing a graphical user interface to JackTrip, a system for high quality audio network performance over the internet.&lt;br/&gt;(Build %BUILD%)&lt;/p&gt;&lt;p&gt;Copyright © 2020 Aaron Wyatt.&lt;br/&gt;Built on JackTrip version %VERSION%, Copyright © 2008-2020 Juan-Pablo Caceres, Chris Chafe, et al.&lt;br/&gt;SoundWIRE group at CCRMA, Stanford University.&lt;/p&gt;&lt;p&gt;This is beta software and is provided &amp;quot;as is&amp;quot;, without warranty of any kind.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
