--- a/src/qjacktrip.ui
+++ b/src/qjacktrip.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>403</width>
-    <height>697</height>
+    <height>737</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -888,6 +888,19 @@ To connect to a hub server you need to run as a hub client.</string>
           </property>
          </widget>
         </item>
+        <item row="9" column="0" colspan="3">
+         <widget class="QCheckBox" name="realTimeCheckBox">
+          <property name="toolTip">
+           <string>Use real time priority for the networking threads.</string>
+          </property>
+          <property name="text">
+           <string>Enable real&amp;time priority for networking threads</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="JitterTab">
@@ -895,7 +908,56 @@ To connect to a hub server you need to run as a hub client.</string>
         <string>Jitter Buffer</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_8">
-        <item row="7" column="2">
+        <item row="10" column="2">
+         <widget class="QLabel" name="packetsLabel">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Packets</string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="0" colspan="3">
+         <widget class="QCheckBox" name="autoQueueCheckBox">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="text">
+           <string>Automatically set the &amp;queue length</string>
+          </property>
+         </widget>
+        </item>
+        <item row="9" column="0" colspan="2">
+         <widget class="QLabel" name="autoQueueLabel">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Aim to &amp;drop no more than one in every</string>
+          </property>
+          <property name="buddy">
+           <cstring>autoQueueSpinBox</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0" colspan="3">
+         <widget class="Line" name="bufferLine">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="9" column="2">
          <widget class="QSpinBox" name="autoQueueSpinBox">
           <property name="enabled">
            <bool>false</bool>
@@ -917,7 +979,31 @@ To connect to a hub server you need to run as a hub client.</string>
           </property>
          </widget>
         </item>
-        <item row="9" column="0" colspan="3">
+        <item row="3" column="0" colspan="3">
+         <widget class="QCheckBox" name="broadcastCheckBox">
+          <property name="toolTip">
+           <string>Enable a second, broadcast output with a higher queue length
+for better quality at the expense of latency.</string>
+          </property>
+          <property name="text">
+           <string>Enable &amp;Broadcast Output</string>
+          </property>
+         </widget>
+        </item>
+        <item row="12" column="0">
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="11" column="0" colspan="3">
          <widget class="QLabel" name="autoQueueExplanationLabel">
           <property name="enabled">
            <bool>false</bool>
@@ -930,49 +1016,29 @@ To connect to a hub server you need to run as a hub client.</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="0" colspan="3">
-         <widget class="Line" name="bufferLine">
+        <item row="0" column="0" colspan="2">
+         <widget class="QCheckBox" name="jitterCheckBox">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="8" column="2">
-         <widget class="QLabel" name="packetsLabel">
-          <property name="enabled">
-           <bool>false</bool>
+          <property name="toolTip">
+           <string>Enable the new jitter buffer. This is now the default.</string>
           </property>
           <property name="text">
-           <string>Packets</string>
+           <string>Enable &amp;Jitter Buffer</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
-        <item row="7" column="0" colspan="2">
-         <widget class="QLabel" name="autoQueueLabel">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>Aim to &amp;drop no more than one in every</string>
-          </property>
-          <property name="buddy">
-           <cstring>autoQueueSpinBox</cstring>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1" colspan="2">
+        <item row="2" column="1" colspan="2">
          <widget class="QComboBox" name="bufferStrategyComboBox">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
+          </property>
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Buffer strategy 1 attempts to drop as little audio data as possible without exceeding the maximum queue length. It operates very similarly to the original buffer implementation with a few fixes to drop even less audio.&lt;/p&gt;&lt;p&gt;Buffer strategy 2 is optimized to keep the latency stable, so that the delay experienced over the connection doesn't fluctuate and is as predictable as possible. The trade off is that more audio might be dropped, but the difference should be negligible with the right queue length.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="currentIndex">
            <number>0</number>
@@ -989,33 +1055,10 @@ To connect to a hub server you need to run as a hub client.</string>
           </item>
          </widget>
         </item>
-        <item row="10" column="0">
-         <spacer name="verticalSpacer">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="0" column="0" colspan="2">
-         <widget class="QCheckBox" name="jitterCheckBox">
-          <property name="toolTip">
-           <string>Enable the jitter buffer. This will eventually become the default.</string>
-          </property>
-          <property name="text">
-           <string>Enable &amp;Jitter Buffer (EXPERIMENTAL)</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
+        <item row="2" column="0">
          <widget class="QLabel" name="bufferStrategyLabel">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -1031,28 +1074,29 @@ To connect to a hub server you need to run as a hub client.</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="0" colspan="3">
-         <widget class="QLabel" name="strategyExplanationLabel">
+        <item row="4" column="0">
+         <widget class="QLabel" name="broadcastQueueLabel">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
-           <string>Buffer strategy 1 attempts to drop as little audio data as possible without exceeding the maximum queue length. If operates very similarly to the original buffer implementation with a few fixes to drop even less audio.
-
-Buffer strategy 2 is optimized to keep the latency stable, so that the delay experienced over the connection doesn't fluctuate and is as predictable as possible. The trade off is that more audio might be dropped, but the difference should be negligible with the right queue length.</string>
+           <string>Broadcast &amp;Queue Length</string>
           </property>
-          <property name="wordWrap">
-           <bool>true</bool>
+          <property name="buddy">
+           <cstring>broadcastQueueSpinBox</cstring>
           </property>
          </widget>
         </item>
-        <item row="6" column="0" colspan="3">
-         <widget class="QCheckBox" name="autoQueueCheckBox">
+        <item row="4" column="1" colspan="2">
+         <widget class="QSpinBox" name="broadcastQueueSpinBox">
           <property name="enabled">
            <bool>false</bool>
           </property>
-          <property name="text">
-           <string>Automatically set the &amp;queue length</string>
+          <property name="toolTip">
+           <string>Set the broadcast queue buffer length, in packet size.</string>
+          </property>
+          <property name="value">
+           <number>8</number>
           </property>
          </widget>
         </item>
@@ -1402,12 +1446,15 @@ and wetness is the essence of beauty.</string>
   <tabstop>redundancySpinBox</tabstop>
   <tabstop>resolutionComboBox</tabstop>
   <tabstop>connectAudioCheckBox</tabstop>
+  <tabstop>realTimeCheckBox</tabstop>
   <tabstop>ioStatsCheckBox</tabstop>
   <tabstop>ioStatsSpinBox</tabstop>
   <tabstop>commandLineButton</tabstop>
   <tabstop>useDefaultsButton</tabstop>
   <tabstop>jitterCheckBox</tabstop>
   <tabstop>bufferStrategyComboBox</tabstop>
+  <tabstop>broadcastCheckBox</tabstop>
+  <tabstop>broadcastQueueSpinBox</tabstop>
   <tabstop>autoQueueCheckBox</tabstop>
   <tabstop>autoQueueSpinBox</tabstop>
   <tabstop>inFreeverbCheckBox</tabstop>
