--- a/win/qjacktrip.wxs
+++ b/win/qjacktrip.wxs
@@ -3,7 +3,7 @@
     <Product Name='QJackTrip' Manufacturer='psi-borg'
         Id='d5a8cca9-264c-41fd-8efc-1cef0850091f'
         UpgradeCode='70450e42-8a91-4c28-8f00-52c6b8e86e37'
-        Language='1033' Codepage='1252' Version='1.2.1'>
+        Language='1033' Codepage='1252' Version='1.3.0'>
 
         <Package Id='*' Keywords='Installer' Description='QJackTrip Installer'
             Comments='Based on Jacktrip, SoundWIRE Group at CCRMA, Stanford' Manufacturer='psi-borg'
@@ -31,6 +31,6 @@
             <ComponentRef Id='ProgramMenuDir' />
         </Feature>
 
-        <Icon Id='qjacktrip.exe' SourceFile='qjacktrip.exe' />
+        <Icon Id='jacktrip.exe' SourceFile='jacktrip.exe' />
     </Product>
 </Wix>
