--- a/src/gui/qjacktrip.ui
+++ b/src/gui/qjacktrip.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>QJackTrip</string>
+   <string>JackTrip</string>
   </property>
   <property name="windowIcon">
    <iconset resource="qjacktrip.qrc">
